# asyncronous-fastapi-pytest-docker-postgresql-template

./: .pre-commit-config.yaml  docker-compose.yaml  pyproject.toml  pytest.ini
migrations/: env.py
migrations/versions/: 4055915c76fe_.py  53f4df72816f_.py  e46e9af404e8_.py
src/: config.py  database.py  main.py  middleware.py  project.env  utils.py
src/admin/: __init__.py  auth.py  views.py
src/auth/: __init__.py  dependencies.py  exceptions.py  routes.py  schemas.py  services.py  utils.py
src/users/: __init__.py  models.py  routes.py  schemas.py
tests/: conftest.py  test.env
tests/fixture/: client.py  database.py
tests/test_routes/: test_users.py
